webapi product controller, generic repo

--- a/node/config/config.json
+++ b/node/config/config.json
@@ -5,7 +5,8 @@
     "database": "rest",
     "host": "localhost",
     "dialect": "sqlite",
-    "storage": "../../db/rest.db"
+    "storage": "../db/rest.db",
+    "language":"en"
   },
   "test": {
     "username": "root",
