--- a/net/RestCompare.cli/RestCompare.cli.csproj
+++ b/net/RestCompare.cli/RestCompare.cli.csproj
@@ -38,6 +38,12 @@
     <Reference Include="Autofac.Integration.WebApi">
       <HintPath>..\RestCompare\packages\Autofac.WebApi2.3.4.0\lib\net45\Autofac.Integration.WebApi.dll</HintPath>
     </Reference>
+    <Reference Include="AutoMapper">
+      <HintPath>..\RestCompare\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper.Net4">
+      <HintPath>..\RestCompare\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.Net4.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Owin">
       <HintPath>..\RestCompare\packages\Microsoft.Owin.2.0.2\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
@@ -76,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiContainer.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -84,7 +91,14 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RestCompare\RestCompare.Data\RestCompare.Data.csproj">
+      <Project>{221ca1c4-441f-4303-b972-a3c7cc8c66b4}</Project>
+      <Name>RestCompare.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\RestCompare\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\RestCompare\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
