--- a/net/RestCompare.cli/packages.config
+++ b/net/RestCompare.cli/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net45" />
+  <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
+  <package id="CompareNETObjects" version="3.01.0.0" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.2" targetFramework="net45" />
@@ -10,5 +13,8 @@
   <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Repository" version="1.0.6.17" targetFramework="net45" />
+  <package id="Repository.EntityFramework" version="1.0.7.1" targetFramework="net45" />
 </packages>
