--- a/node/package.json
+++ b/node/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Rest Compare",
+  "name": "",
   "description": "Rest infrastructure",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
     "express": "3.x",
-    "express-resource": "*"
+    "express-resource": "*",
+    "body-parser": "*"
   }
 }
