--- a/net/RestCompare.Api/packages.config
+++ b/net/RestCompare.Api/packages.config
@@ -4,11 +4,13 @@
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="FluentValidation" version="5.5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.94.0" targetFramework="net45" />
 </packages>
