--- a/net/src/Rest.Api/config.json
+++ b/net/src/Rest.Api/config.json
@@ -7,5 +7,10 @@
       "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;",
       "Db": "Data Source=.\rest.db"
     }
+  },
+  "EntityFramework": {
+      "MoviesAppContext": {
+          "ConnectionStringKey": "Data:DefaultConnection:Db"
+      }
   }
 }
