--- a/net/src/Rest.Api/config.json
+++ b/net/src/Rest.Api/config.json
@@ -1,6 +1,6 @@
 ﻿{
   "AppSettings": {
-        "SiteTitle": "WebApplication2",
+        "SiteTitle": "RestCompare",
   },
   "Data": {
     "DefaultConnection": {
