--- a/net/src/Rest.Api/project.json
+++ b/net/src/Rest.Api/project.json
@@ -3,17 +3,16 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "Microsoft.AspNet.Mvc": "6.0.0-beta5",
-    "Microsoft.AspNet.Server.IIS": "1.0.0-beta5",
+    "Microsoft.AspNet.Mvc": "6.0.0-beta6",
+    "Microsoft.AspNet.Server.IIS":  "1.0.0-beta5",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta5",
     "Microsoft.AspNet.StaticFiles": "1.0.0-beta5",
     "EntityFramework.SqlServer": "7.0.0-beta6",
     "EntityFramework.Commands": "7.0.0-beta6",
     "EntityFramework.Sqlite": "7.0.0-beta6",
+    "Microsoft.Framework.Runtime.Abstractions": "1.0.0-beta6",
     "Microsoft.Framework.Configuration": "1.0.0-beta6",
     "Microsoft.Framework.Configuration.Json": "1.0.0-beta6",
-    "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
-    "Microsoft.Framework.ConfigurationModel": "1.0.0-beta4",
     "Serilog.Framework.Logging": "1.0.0-beta-43"
   },
 
