--- a/net/src/Rest.Api/config.json
+++ b/net/src/Rest.Api/config.json
@@ -5,11 +5,11 @@
   "Data": {
     "DefaultConnection": {
       "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;",
-      "Db": "Data Source=.\rest.db"
+      "Db": "Data Source=./rest.db;"
     }
   },
   "EntityFramework": {
-      "MoviesAppContext": {
+      "DbContext": {
           "ConnectionStringKey": "Data:DefaultConnection:Db"
       }
   }
